# MAI

./: .env.example  .gitignore  Dockerfile  MAI — Especificação de UI.md  PRD.md  README.md  pyproject.toml
beta_pack/: .gitkeep  crônicas_de_orion__ana_becker.epub  crônicas_urbanas__ricardo_azevedo.epub  guia_das_constelações__miguel_neto.epub  manual_do_jardineiro__lia_campos.epub  sombras_de_saturno__joana_lima.epub
db/: schema.sql
sample_data/: .gitkeep
scripts/: generate_beta_pack.py  ingest_pipeline.py  organize_report.py
src/mai/: __init__.py  main.py
src/mai/api/: __init__.py  dependencies.py
src/mai/core/: config.py  logging.py
src/mai/db/: __init__.py  indexer.py  init.py  models.py  session.py
src/mai/ingest/: __init__.py  cli.py  extractors.py  pipeline.py  providers.py  service.py  types.py
src/mai/organizer/: __init__.py  cli.py  fs.py  namer.py  service.py
src/mai/review/: service.py
src/mai/schemas/: books.py  files.py  imports.py  matching.py  organize.py  providers.py  review.py  system.py
src/mai/utils/: files.py
src/mai_qt/: __init__.py  app.py  library_model.py  services.py  theme.py
src/mai_qt/pages/: simple_pages.py
src/mai_qt/widgets/: detail_panel.py  import_panel.py  library_page.py  main_window.py  organizer_panel.py  review_page.py
tests/: conftest.py  test_opds.py  test_review_service.py  test_services.py
tmp/: .gitkeep  test-2ce39717-c3a3-46f4-ac99-5d71ded0546f.db
tmpdb/: .gitkeep  db-1f0d0218-ab3d-413d-8ed7-b94554b40687.sqlite  test-45364098-8084-4acb-86d5-535c24635dfb
var/data/: .gitkeep  mai.db
(+12 files in other folders)
